[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "yaml2gym"
version = "0.1.0"
description = "A YAML-driven RL environment builder using Gymnasium and Pygame"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "gymnasium>=0.28.1",
    "pygame>=2.1.2",
    "pyyaml>=6.0",
    "numpy>=1.21.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.990",
    "pylint>=2.15.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["yaml2gym*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[project.scripts]
play-env = "yaml2gym.scripts.play_env:main"
train-agent = "yaml2gym.scripts.train_agent:main"
